2008-05-27  Ville Vainio <vivainio@gmail.com>

	* iplib.py, ipmaker.py: survive lack of doctest and site._Helper
	for minimal environments (e.g. Maemo sdk python)

	* Magic.py: cpaste strips whitespace before >>> (allow pasting
	doctests)

2008-05-14  Ville Vainio <vivainio@gmail.com>

	* Extensions/ipy_greedycompleter.py: 
	New extension that enables a bit more "relaxed" tab 
	completer that evaluates code without safety checks
	(i.e. there can be side effects like function calls)

2008-04-20  Ville Vainio <vivainio@gmail.com>

	* Extensions/ipy_lookfor.py: add %lookfor magic command
	(search docstrings for words) by Pauli Virtanen. Close #245.

	* Extension/ipy_jot.py: %jot and %read magics, analogous
	to %store but you can specify some notes. Not read 
	in automatically on startup, you need %read.
	Contributed by Yichun Wei.

2008-04-18  Fernando Perez  <Fernando.Perez@berkeley.edu>

	* IPython/genutils.py (page): apply workaround to curses bug that
	can leave terminal corrupted after a call to initscr().

2008-04-15  Ville Vainio <vivainio@gmail.com>

	* genutils.py: SList.grep supports 'field' argument

	* ipy_completers.py: module completer looks inside
	.egg zip files (patch by mc). Close #196.

2008-04-09  Ville Vainio <vivainio@gmail.com>

	* deep_reload.py: do not crash on from __future__ import 
	absolute_import. Close #244.

2008-04-02  Ville Vainio <vivainio@gmail.com>

	* ipy_winpdb.py: New extension for winpdb integration.  %wdb
	test.py is winpdb equivalent of %run -d test.py.  winpdb is a
	crossplatform remote GUI debugger based on wxpython.

2008-03-29  Ville Vainio <vivainio@gmail.com>

	* ipython.rst, do_sphinx.py: New documentation base, based on
	reStucturedText and Sphinx (html/pdf generation).  The old Lyx
	based documentation will not be updated anymore.

	* jobctrl.py: Use shell in Popen for 'start' command (in windows).

2008-03-24  Ville Vainio <vivainio@gmail.com>

	* ipython.rst, do_sphinx.py: New documentation base, based on