@@ -6,6 +6,9 @@
 	* Magic.py: cpaste strips whitespace before >>> (allow pasting
 	doctests)
 
+	* ipy_completers.py: cd completer now does recursive path expand
+	(old behaviour is buggy on some readline versions)
+
 2008-05-14  Ville Vainio <vivainio@gmail.com>
 
 	* Extensions/ipy_greedycompleter.py: 
